2015-05-19  Natalia Portillo  <claunia@claunia.com>

	* Main.cs:
	* Options.cs:
	* Commands/Entropy.cs:
	* DiscImageChef.csproj:
	  Implement "entropy" command.

2015-04-24  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/VHD.cs:
	  Syntax cleaning.

2015-04-24  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/VHD.cs:
	  Implemented support for Virtual PC differencing (undo) disk
	  images.

2015-04-24  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/VHD.cs:
	  Add support for dynamic disk images.

2015-04-22  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/Apple2MG.cs:
	  Casting typo

2015-04-22  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/VHD.cs:
	* ImagePlugins/Apple2MG.cs:
	  Style changes

2015-04-22  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/VHD.cs:
	* DiscImageChef.csproj:
	  Implemented support for Virtual PC fixed size disk images.

2015-04-21  Natalia Portillo  <claunia@claunia.com>

	* BigEndianBitConverter.cs:
	  Added support for bigendian UUID/Guid

2015-04-20  Natalia Portillo  <claunia@claunia.com>

	* Plugins/AmigaDOS.cs:
	* PartPlugins/Atari.cs:
	  Style corrections.

2015-04-20  Natalia Portillo  <claunia@claunia.com>

	* PartPlugins/Atari.cs:
	  Added support for NetBSD partition identifiers.

2015-04-20  Natalia Portillo  <claunia@claunia.com>

	* PartPlugins/Atari.cs:
	* DiscImageChef.csproj:
	  Implemented support for Atari partitions.

2015-04-20  Natalia Portillo  <claunia@claunia.com>

	* DateHandlers.cs:
	* Plugins/AmigaDOS.cs:
	* DiscImageChef.csproj:
	  Added support for AmigaDOS filesystems.

2015-04-20  Natalia Portillo  <claunia@claunia.com>

	* PartPlugins/RDB.cs:
	  Typo submerged in infinite loop for non-RDB disks.

2015-04-20  Natalia Portillo  <claunia@claunia.com>

	* Plugins/BFS.cs:
	* Plugins/ODS.cs:
	* Plugins/FFS.cs:
	* Plugins/FAT.cs:
	* Plugins/NTFS.cs:
	* Plugins/HPFS.cs:
	* Plugins/SysV.cs:
	* Plugins/Opera.cs:
	* Plugins/extFS.cs:
	* Plugins/LisaFS.cs: